test/TestSuite/Syntax/Errors/shift_id_expected.tjp
project test "Test" "1.0" 2007-08-20 +2m 

resource r "R" {
# MARK: error 5 shift_id_expected 
	shifts foo 2007-08-20 +2d
}

